tests/golden/type_errors/generic_enum_duplicate_parameter.cd
enum Pair<T, T> { Value(T) }
