tests/golden/type_errors/generic_enum_duplicate_parameter.err
Type error at 1:14: duplicate type parameter `T`
  enum Pair<T, T> { Value(T) }
               ^
